--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 /* Cabeçalho */
 header {
   background-color: rgba(255, 149, 0, 0.941);
-  color: black;
+  color: white;
   text-align: center;
   padding: 20px;
 }
